[project]
name = "comfy-action"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "charset-normalizer>=3.4.1",
    "comfy-cli>=1.3.7",
    "google-cloud-storage>=3.0.0",
    "gputil>=1.4.0",
    "pip>=25.0.1",
    "psutil>=7.0.0",
    "requests>=2.32.3",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "pyyaml>=6.0.2",
    "tabulate>=0.9.0",
]
